# lvgl

./: CMakeLists.txt  lv_conf.h
